<resources>
    <string name="app_name">食尚客</string>


    <string name="app_name_release">食尚客商家</string>
    <string name="app_name_debug">食尚客Debug</string>

    <string name="app_sp">mind</string>

    <string name="app_url_api">https://quanqdg88.cn:8088/</string>
    <string name="app_url_api_debug">http://120.79.224.38:8088/</string>


    <string name="save">保存</string>
    <string name="dialog_title">提示</string>
    <string name="other_phone_login">该账号在其他设备登录\n请重新登录</string>

    <string name="app_default_money">0.00</string>
    <string name="app_default_int">0</string>


    <!--main start-->
    <string name="main_handled">待处理</string>
    <string name="main_shop">店铺</string>
    <string name="main_order">订单</string>
    <string name="main_my">我的</string>

    <!--Login start-->
    <string name="login_title">登录</string>
    <string name="login_account">账号</string>
    <string name="login_account_hint">请输入登录账号</string>
    <string name="login_account_toast">请输入有效账号</string>
    <string name="login_pwd">密码</string>
    <string name="login_pwd_hint">请输入登录密码</string>
    <string name="login_phone">手机号码</string>
    <string name="login_phone_hint">请输入手机号码</string>
    <string name="login_phone_toast">请输入有效手机号</string>
    <string name="login_code">验证码</string>
    <string name="login_code_hint">请输入验证码</string>
    <string name="login_get_code">获取验证码</string>
    <string name="login_phone_login">手机验证码登录</string>
    <string name="login_account_login">账号密码登录</string>
    <string name="login_froget_pwd">忘记密码?</string>

    <!--Register start-->
    <string name="register_title">注册</string>
    <string name="register_phone">手机号码</string>
    <string name="register_phone_hint">请输入手机号码</string>
    <string name="register_phone_toast">请输入有效手机号</string>
    <string name="register_code">验证码</string>
    <string name="register_code_hint">请输入验证码</string>
    <string name="register_get_code">获取验证码</string>
    <string name="register_next">下一步</string>
    <string name="register_account">设置登录账号,注册后不可更改</string>
    <string name="register_account_hint">6-11位数字</string>
    <string name="register_account_toast">账号只能设置为6-11位数字</string>
    <string name="register_pwd">设置密码</string>
    <string name="register_pwd_hint">6-15位字母大小写与数字组合</string>
    <string name="register_pwd2">再次确认密码</string>
    <string name="register_pwd2_hint">6-15位字母大小写与数字组合</string>
    <string name="register_pwd_toast">密码不一致,请重新设置</string>

    <!--ForgetPwd start-->
    <string name="forgetPwd_title">找回密码</string>
    <string name="forgetPwd_phone">手机号码</string>
    <string name="forgetPwd_phone_hint">请输入手机号码</string>
    <string name="forgetPwd_phone_toast">请输入有效手机号</string>
    <string name="forgetPwd_code">验证码</string>
    <string name="forgetPwd_code_hint">请输入验证码</string>
    <string name="forgetPwd_get_code">获取验证码</string>
    <string name="forgetPwd_next">下一步</string>
    <string name="forgetPwd_pwd">设置密码</string>
    <string name="forgetPwd_pwd_hint">6-15位字母大小写与数字组合</string>
    <string name="forgetPwd_pwd2">再次确认密码</string>
    <string name="forgetPwd_pwd2_hint">6-15位字母大小写与数字组合</string>
    <string name="forgetPwd_pwd_toast">密码不一致,请重新设置</string>
    <string name="forgetPwd_complete">完成</string>

    <!--Shop start-->
    <string name="shop_title">店铺</string>
    <string name="shop_creat">点击创建店铺</string>
    <string name="shop_sale_data">销售数据</string>
    <string name="shop_today_sale">今日销售额(元）</string>
    <string name="shop_today_order">今日订单(单）</string>
    <string name="shop_function">实用功能</string>
    <string name="shop_release">发布菜品</string>
    <string name="shop_manage_food">菜品管理</string>
    <string name="shop_manage_table">餐桌管理</string>
    <string name="shop_hot_food">热销菜品</string>
    <string name="shop_manage_sort">分类管理</string>
    <string name="shop_restaurant_info">餐厅信息</string>

    <!--My start-->
    <string name="my_title">我的</string>

    <!--Order start-->
    <string name="order_title">订单</string>

    <!--Handled start-->
    <string name="handled_title">待处理</string>

</resources>
