<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <RelativeLayout
        android:id="@+id/rl_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60px"
        android:layout_marginRight="60px">

        <TextView
            android:id="@+id/tv_login_account"
            style="@style/text_b3_30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40px"
            android:text="@string/login_account" />

        <EditText
            android:id="@+id/et_login_account"
            style="@style/input_30_left"
            android:layout_height="100px"
            android:layout_below="@+id/tv_login_account"
            android:hint="@string/login_account_hint"
            android:inputType="number"
            android:maxLength="11"
            android:textColorHint="@color/grayc" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_below="@+id/et_login_account"
            android:background="@color/black9" />


        <TextView
            android:id="@+id/tv_login_pwd"
            style="@style/text_b3_30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_login_account"
            android:layout_marginTop="56px"
            android:text="@string/login_pwd" />

        <!--密码-->
        <RelativeLayout
            android:id="@+id/rl_01"
            android:layout_width="match_parent"
            android:layout_height="100px"
            android:layout_below="@+id/tv_login_pwd">


            <EditText
                android:id="@+id/et_login_pwd"
                style="@style/input_30_left"
                android:layout_toLeftOf="@+id/rl_login_del"
                android:digits="0123456789abcdefghijgklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:hint="@string/login_pwd_hint"
                android:inputType="textPassword"
                android:textColorHint="@color/grayc" />


            <!--清空-->
            <RelativeLayout
                android:id="@+id/rl_login_del"
                android:layout_width="80px"
                android:layout_height="100px"
                android:layout_toLeftOf="@+id/rl_login_show">

                <ImageView
                    android:layout_width="32px"
                    android:layout_height="32px"
                    android:layout_centerInParent="true"
                    android:background="@mipmap/ic_text_del" />

            </RelativeLayout>

            <!--显示隐藏密码-->
            <RelativeLayout
                android:id="@+id/rl_login_show"
                android:layout_width="80px"
                android:layout_height="100px"
                android:layout_alignParentRight="true">

                <ImageView
                    android:id="@+id/iv_login_show"
                    android:layout_width="32px"
                    android:layout_height="32px"
                    android:layout_centerInParent="true"
                    android:src="@mipmap/ic_pwd_unshow" />

            </RelativeLayout>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_below="@+id/rl_01"
            android:background="@color/black9" />

    </RelativeLayout>

    <FrameLayout
        android:id="@+id/fl_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_login"
        android:layout_marginLeft="60px"
        android:layout_marginRight="60px"
        android:visibility="gone" />


    <TextView
        android:id="@+id/tv_login_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btn_login_login"
        android:layout_below="@+id/fl_login"
        android:layout_marginTop="10px"
        android:paddingBottom="10px"
        android:paddingTop="10px"
        android:text="@string/login_phone_login"
        android:textColor="@color/colorMain"
        android:textSize="26px" />

    <!--忘记密码-->
    <TextView
        android:id="@+id/tv_login_forget_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/btn_login_login"
        android:layout_below="@+id/fl_login"
        android:layout_marginTop="10px"
        android:paddingBottom="10px"
        android:paddingTop="10px"
        android:text="@string/login_froget_pwd"
        android:textColor="@color/black3"
        android:textSize="26px" />

    <Button
        android:id="@+id/btn_login_login"
        style="@style/btn_style01"
        android:layout_below="@+id/fl_login"
        android:layout_marginLeft="60px"
        android:layout_marginRight="60px"
        android:layout_marginTop="134px"
        android:text="@string/login_title" />

</RelativeLayout>